--- a/db_master/pg_hba.conf
+++ b/db_master/pg_hba.conf
@@ -94,7 +94,8 @@ local   all             postgres                                peer
 local   all             all                                     peer
 # IPv4 local connections:
 host    all             all             127.0.0.1/32            md5
-host    all             all             10.213.194.0/24         md5
+host    all             all             pgpool-01               md5
+host    all             all             dbslave-01              md5
 # IPv6 local connections:
 host    all             all             ::1/128                 md5
 # Allow replication connections from localhost, by a user with the
@@ -102,4 +103,4 @@ host    all             all             ::1/128                 md5
 #local   replication     all                                     peer
 #host    replication     all             127.0.0.1/32            md5
 #host    replication     all             ::1/128                 md5
-host    replication     replicator      10.213.194.22/32         trust
+host    replication     replicator      dbslave-01         trust
