--- a/pgpool_1st/pgpool.conf
+++ b/pgpool_1st/pgpool.conf
@@ -74,7 +74,7 @@ serialize_accept = off
 
 # - Backend Connection Settings -
 
-backend_hostname0 = '10.213.194.77'
+backend_hostname0 = dbmaster 
                                    # Host name or IP address to connect to for backend 0
 backend_port0 = 5432
                                    # Port number for backend 0
@@ -88,7 +88,7 @@ backend_flag0 = 'ALLOW_TO_FAILOVER'
                                    # or ALWAYS_PRIMARY
 backend_application_name0 = 'server0'
                                    # walsender's application_name, used for "show pool_nodes" command
-backend_hostname1 = '10.213.194.22'
+backend_hostname1 = dbslave-01
 backend_port1 = 5432
 backend_weight1 = 1
 backend_data_directory1 = '/var/lib/postgresql/13/main'
