--- a/db_slave/postgresql.conf
+++ b/db_slave/postgresql.conf
@@ -312,7 +312,7 @@ min_wal_size = 80MB
 
 # These settings are ignored on a master server.
 
-primary_conninfo = '10.213.194.77 port=5432 user=replicator'			# connection string to sending server
+primary_conninfo = 'dbmaster port=5432 user=replicator'			# connection string to sending server
 #primary_slot_name = 'repl_slot'			# replication slot on sending server
 #promote_trigger_file = ''		# file name whose presence ends recovery
 hot_standby = on			# "off" disallows queries during recovery
